--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,7 +38,7 @@
             <div class="inner">
                 <p>{{ content }}</p>
                 <ul class="actions">
-                    <li><a href="landing.html" class="button next">Get Started</a></li>
+                    <li><a href="#one" class="button next">Get Started</a></li>
                 </ul>
             </div>
         </section>
